# rust-wasm-demo

./: LICENSE  README.md  wasm-hello-world-demo.wasm  wasm-pg-demo.wasm
wasm-hello-world-demo/: Cargo.toml
wasm-hello-world-demo/src/: lib.rs
wasm-pg-demo/: .gitignore  Cargo.toml
wasm-pg-demo/src/: lib.rs  main.rs
